mutants.out.old/log/crates__core__src__lib.rs_line_10_col_5.log

*** crates/core/src/lib.rs:10:5: replace workspace_descriptor -> WorkspaceDescriptor with Default::default()

*** mutation diff:
--- crates/core/src/lib.rs
+++ replace workspace_descriptor -> WorkspaceDescriptor with Default::default()
@@ -2,37 +2,17 @@
 
 #[derive(Debug, Clone, Copy, PartialEq, Eq)]
 pub struct WorkspaceDescriptor {
     pub name: &'static str,
     pub packages: &'static [&'static str],
 }
 
 pub fn workspace_descriptor() -> WorkspaceDescriptor {
-    WorkspaceDescriptor {
-        name: WORKSPACE_NAME,
-        packages: &[
-            "core",
-            "node",
-            "workflow",
-            "workflow-registry",
-            "job",
-            "job-registry",
-            "app",
-            "cli",
-            "skill",
-            "agent",
-            "script",
-            "sandbox",
-            "sandbox-registry",
-            "runtime",
-            "graph-viewer",
-            "workflow-viewer",
-        ],
-    }
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 #[cfg(test)]
 mod tests {
     use super::workspace_descriptor;
 
     #[test]
     fn descriptor_lists_expected_packages() {


*** /Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --verbose --package=manual-core@0.1.0
       Dirty manual-core v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/crates/core): the file `crates/core/src/lib.rs` has changed (1778057021.839677092s, 1m 44s after last build at 1778056917.953070223s)
   Compiling manual-core v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/crates/core)
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name manual_core --edition=2024 crates/core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=0d97319231d552e9 -C extra-filename=-32b4ad76abb36ccb --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps`
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name manual_core --edition=2024 crates/core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=c6d78c1c1145d3eb -C extra-filename=-c5ae42a401852ddc --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps`
error[E0277]: the trait bound `WorkspaceDescriptor: Default` is not satisfied
  --> crates/core/src/lib.rs:10:5
   |
10 |     Default::default() /* ~ changed by cargo-mutants ~ */
   |     ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `WorkspaceDescriptor`
   |
help: consider annotating `WorkspaceDescriptor` with `#[derive(Default)]`
   |
 4 + #[derive(Default)]
 5 | pub struct WorkspaceDescriptor {
   |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `manual-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name manual_core --edition=2024 crates/core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=c6d78c1c1145d3eb -C extra-filename=-c5ae42a401852ddc --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `manual-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name manual_core --edition=2024 crates/core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=0d97319231d552e9 -C extra-filename=-32b4ad76abb36ccb --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-mYyGzN.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
